--- a/_posts/2019-07-06-the-us-narrative-today.html
+++ b/_posts/2019-07-06-the-us-narrative-today.html
@@ -2604,107 +2604,107 @@ stories:
   domain: http://www.ddtonline.com/
   link: https://www.ddtonline.com/news/donations-assist-family-laying-joe-sykes-rest
 images:
-- name: carry-load-carryload-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-yellow-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-- name: stories-slashdb-sql-pass-through-mode.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-slashdb-sql-pass-through-mode.png
-- name: downtown-los-angeles-downtown-la-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-umberto-bocc.JPG
-- name: border-fence-border-fence-on-hill-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-circuit.jpg
-- name: server-cloud1-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-nazi-poster.jpg
-- name: beach-rocks-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kand-two.jpg
-- name: store-on-corner-oldcabin-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-oily-mcoilface.jpg
-- name: mosaic-face-mosaic-face-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-aqua.jpg
-- name: machine-road-machine-road-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dark-soul.jpg
-- name: powerlines-power-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-wols.jpg
-- name: statue-of-liberty-front-view-statueofliberty.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty.jpg
-- name: aws-s3-stories-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit-3.jpg
-- name: old-gas-pumps-oldgaspumps-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-graham-sutherland.jpg
-- name: old-gas-pumps-oldgaspumps-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-brush.jpg
-- name: ellis-island-ellis-island-room-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-brush.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sunday.jpg
-- name: oldhouse-granaryfield-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-rain.jpg
-- name: stories-fence-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-crabapple.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
-- name: paris-paris-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-wols.jpg
-- name: lincoln-memorial-lincolnmemorial-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-green-zuma.jpg
-- name: trucksilo-trucksilo-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colored-circuits.jpg
-- name: school-clouds-church-clouds-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-emily-carr.jpg
-- name: aws-s3-tunnel-tunnel-purp-paper-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still-1200.jpg
-- name: machine-road-machine-road-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-constitution.jpg
-- name: server-cloud-server-racks-door-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
-- name: aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1.jpg
-- name: hollywood-building-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-bright-sand.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-alberto-giacometti.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-- name: locked-up-steam-lock-up-steam-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-ww2-color.jpg
-- name: oldhotel-oldhotel-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-deep-connections.jpg
-- name: cargo-ship-cargo-ship-on-sea-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-matrix.jpg
-- name: white-house-lawn-white-house-window-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-space-pizza.jpg
-- name: oldhouse-granaryfield-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-dark-soul.jpg
-- name: birdhouse-birdhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colorful-blocks.jpg
-- name: crow_spagetti_accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_spagetti_accident.jpg
-- name: oldhotel-oldhotel-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-green-zuma.jpg
-- name: razorwire-DSC-0080-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
-- name: white-house-whitehouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-gred-mash.jpg
-- name: oldhouse-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-blocks.jpg
-- name: abandonedbuildings_colorful_blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colorful_blocks.jpg
-- name: crow-crow-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purp-paper.jpg
-- name: store-on-corner-store-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-dali.jpg
-- name: curtain-curtain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-marcel-duchamp.jpg
-- name: server-cloud-server-racks-door-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit.jpg
-- name: bordercrossing-bordercrossing-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dry-skin.jpg
-- name: mediterranean-mediterranean-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-graham-sutherland.jpg
+- name: old-house-oldhouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-atari-asteroids.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-crafty-painting.jpg
+- name: oldhouse-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-soul.jpg
+- name: locked-up-steam-lock-up-steam-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alien-goggles.jpg
+- name: nyc-flag-nycflag-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-brush.jpg
+- name: oldhouse-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dali-two.jpg
+- name: death-valley-death-valley-national-park-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-post-modern.jpg
+- name: aws-s3-square-ellis-island-nazi-poster-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-ellis-island-nazi-poster-square.jpg
+- name: yuma-bank-yuma-bak-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alien-goggles.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
+- name: aws-s3-stories-shipping-energy-trucking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-shipping-energy-trucking.jpg
+- name: white-house-lawn-white-house-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
+- name: lincoln-memorial-lincolnmemorial-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-dark-dali.jpg
+- name: nyc-flag-api-conversations.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations.jpg
+- name: rockingchair-face-2-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-constitution.jpg
+- name: downtown-los-angeles-downtown-la-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-granite.JPG
+- name: machine-road-machine-road-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-creativity.jpg
+- name: old-church-oldchurch-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-pablo-blue.jpg
+- name: meadowbutterfly-meadow-butterfly-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
+- name: oldsmallboat-oldsmallboat-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-diego-rivera1.jpg
+- name: aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-76-73-800-500-0-max-0--1--1-square.jpg
+- name: oldcabin-store-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-rainbow-festival.jpg
+- name: oldhotel-oldhotel-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-circuit.jpg
 - name: machine-road-machine-road-neo-instinct.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-neo-instinct.jpg
+- name: white-house-whitehouse-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-oily-mcoilface.jpg
+- name: old-granary-field-oldhouse-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-alberto-giacometti.jpg
+- name: fence-mexico-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-space-pizza.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
+- name: san-francisco-street-view-san-francisco-street-view-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-satan-red.jpg
+- name: trucksilo-trucksilo-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-rain.jpg
+- name: bordercrossing-bordercrossing-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-space-pizza.jpg
+- name: stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-diego-rivera1.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
+- name: castle-wall-DSC-0067.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067.JPG
+- name: san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
+- name: ellis-island-ellis-island-room-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smoking-cigarette.jpg
+- name: ellis-island-ellisisland-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
+- name: rain-princess-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4833.jpg
+- name: locked-up-steam-lock-up-steam-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-oily-mcoilface.jpg
+- name: blossombar-space-pizza-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-50-62.jpg
+- name: blossombar-crafty-painting-file-00-00-50-35.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-35.jpg
+- name: old-gas-pumps-oldgaspumps-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-asteroids.jpg
+- name: old-door-lock-old-door-lock-2-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-bright-sand.jpg
+- name: aws-s3-stories-new-path-in-the-woods-black-white.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-path-in-the-woods-black-white.jpg
+- name: rain-princess-IMG_6436.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6436.jpg
+- name: dragon-desert-desert-dragon-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
+- name: white-house-whitehouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crunch-paper.jpg
+- name: machine-road-machine-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-missle.jpg
+- name: oldhousecars-house-old-cars-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kand-two.jpg
+- name: ellis-island-ellisisland-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crafty-painting.jpg
+- name: yosemite-yosemite-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-yellow-collage.jpg
 ---
 Nicki Minaj Wants Respect.&nbsp;To Chase Or Not To Chase? Police Say It's A Tough Decision.&nbsp;Algeria's Divided Democracy Uprising Seeks End To Impasse.&nbsp;Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;Angielski Dominuje Na Maturze.&nbsp;Gangluff Wins Second Straight Ohio Open In Dramatic Playoff.&nbsp;Farm Bureau Seeks Photographs For 100th Anniversary.&nbsp;The Importance Of A Shared Memory, By Shelly Aldean.&nbsp;
